fixed header alignments

--- a/display.css
+++ b/display.css
@@ -11,7 +11,9 @@ body {
 }
 
 .pagetitle {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* index page items */
@@ -175,7 +177,9 @@ body {
 }
 
 .projecttitle {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .idolshowdown iframe, .tanjutales img , .holocenter img{
